# earnings-summarizer

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  graph.py  langgraph.json  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.ps1  setup.sh  test_backend.py
backend/app/: config.py  database.py  main.py  rag.py  schemas.py  session_manager.py
backend/app/agents/: __init__.py  conversation_router.py  earnings_agent.py
backend/app/api/: routes.py
backend/app/services/: __init__.py  financial_scraper.py  metrics_service.py
backend/app/tools/: __init__.py  document_parser.py  investor_relations.py  web_search.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  USAGE_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MetricsDashboard.tsx  SearchHistorySidebar.tsx
frontend/src/types/: metrics.ts
