[project]
name = "earnings-summarizer"
version = "1.0.0"
description = "AI-powered earnings report summarizer using LangChain and LangGraph"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    
    # LangChain and LangGraph
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.6.2",
    
    # Web scraping and search
    "ddgs>=4.4.3",
    "playwright>=1.41.2",
    "beautifulsoup4>=4.12.3",
    
    # PDF parsing
    "pypdf>=4.0.1",
    "pdfplumber>=0.10.3",
    
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9.9",
    
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "tiktoken>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

